--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -23,10 +23,8 @@
 				<div class="form-group">
 					<label for="model">Model:</label>
 					<select class="form-control" id="model" name="model">
-						<option value="davinci">Davinci</option>
-						<option value="curie">Curie</option>
-						<option value="babbage">Babbage</option>
-						<option value="ada">Ada</option>
+						<option value="davinci">Emoji: Davinci</option>
+						<option value="curie">Emoji: Curie</option>
 					</select>
 				</div>
 				<button type="submit" class="btn btn-primary">Generate</button>
