--- a/webapp/templates/error.html
+++ b/webapp/templates/error.html
@@ -2,47 +2,12 @@
 <html>
   <head>
     <title>Error</title>
-    <style>
-      body {
-        background-color: #f8f9fa;
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        line-height: 1.5;
-        color: #212529;
-        text-align: center;
-      }
-      .container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 100%;
-        padding: 0 20px;
-      }
-      h1 {
-        margin-top: 50px;
-        font-size: 2.5rem;
-        font-weight: 600;
-      }
-      p {
-        margin-top: 20px;
-        font-size: 1.25rem;
-        text-align: left;
-      }
-      button {
-        margin-top: 40px;
-        font-size: 1rem;
-        padding: 10px 20px;
-        border-radius: 5px;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        cursor: pointer;
-        transition: background-color 0.2s;
-      }
-      button:hover {
-        background-color: #0069d9;
-      }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container">
